--- a/linters/.jshintrc
+++ b/linters/.jshintrc
@@ -1,7 +1,3 @@
-/**
- *  Check out the default JSHint options at:
- *  https://github.com/jshint/jshint/blob/master/examples/.jshintrc
- */
 {
     "bitwise": true,
     "camelcase": true,
@@ -13,6 +9,7 @@
     "newcap": false,
     "noempty": true,
     "quotmark": "single",
+    "maxerr": 1000,
     "maxlen": 79,
     "undef": true,
     "laxbreak": true,
