add disallowQuotedKeysInObjects rule to jscs config file

--- a/linters/.jscsrc
+++ b/linters/.jscsrc
@@ -12,6 +12,7 @@
         ".",
         "="
     ],
+    "disallowQuotedKeysInObjects": false,
     "disallowSpacesInCallExpression": true,
     "disallowSpacesInsideTemplateStringPlaceholders": true,
     "disallowTrailingComma": true,
