--- a/linters/.eslintrc
+++ b/linters/.eslintrc
@@ -114,7 +114,7 @@
         "no-shadow-restricted-names": ["error"],
         "no-undef": ["error"],
         "no-undef-init": ["warn"],
-        "no-undefined": ["error"],
+        "no-undefined": ["off"],
         "no-unused-vars": ["warn"],
         "no-use-before-define": ["error"],
 
@@ -141,14 +141,14 @@
         "func-names": ["error"],
         "func-style": ["error", "declaration", {"allowArrowFunctions": true}],
         "id-blacklist": ["off"],
-        "id-length": ["warn", {"min": 2, "max": 20, "properties": "always"}],
+        "id-length": ["off"],
         "id-match": ["off"],
         "indent": ["error", 4],
         "jsx-quotes": ["off"],
         "key-spacing": ["error", {"beforeColon": false, "afterColon": true}],
         "keyword-spacing": ["error", {"before": true, "after": true}],
         "linebreak-style": ["error", "unix"],
-        "lines-around-comment": ["error", {"beforeBlockComment": true, "beforeLineComment": true, "allowBlockStart": true, "allowBlockEnd": true, "allowObjectStart": true}],
+        "lines-around-comment": ["off"],
         "max-depth": ["warn", {"max": 10}],
         "max-len": ["error", 79],
         "max-nested-callbacks": ["warn", {"max": 5}],
@@ -183,7 +183,7 @@
         "one-var-declaration-per-line": ["error", "always"],
         "operator-assignment": ["warn", "always"],
         "operator-linebreak": ["error", "before"],
-        "padded-blocks": ["error", "never"],
+        "padded-blocks": ["off"],
         "quote-props": ["error", "always"],
         "quotes": ["error", "single", {"allowTemplateLiterals": true}],
         "require-jsdoc": ["off"],
