update eslint rules

--- a/linters/.eslintrc
+++ b/linters/.eslintrc
@@ -42,11 +42,11 @@
         "array-callback-return": ["error"],
         "block-scoped-var": ["error"],
         "complexity": ["warn", {"max": 20}],
-        "consistent-return": ["error"],
+        "consistent-return": ["off"],
         "curly": ["error", "all"],
         "default-case": ["error"],
         "dot-location": ["error", "property"],
-        "dot-notation": ["error", {"allowKeywords": false}],
+        "dot-notation": ["error"],
         "eqeqeq": ["error"],
         "guard-for-in": ["error"],
         "no-alert": ["error"],
@@ -66,7 +66,7 @@
         "no-implicit-coercion": ["error"],
         "no-implicit-globals": ["error"],
         "no-implied-eval": ["error"],
-        "no-invalid-this": ["error"],
+        "no-invalid-this": ["off"],
         "no-iterator": ["error"],
         "no-labels": ["warn", {"allowLoop": true}],
         "no-lone-blocks": ["error"],
@@ -138,7 +138,7 @@
         "computed-property-spacing": ["error", "never"],
         "consistent-this": ["error", "self"],
         "eol-last": ["error"],
-        "func-names": ["error"],
+        "func-names": ["off"],
         "func-style": ["error", "declaration", {"allowArrowFunctions": true}],
         "id-blacklist": ["off"],
         "id-length": ["off"],
@@ -152,10 +152,10 @@
         "max-depth": ["warn", {"max": 10}],
         "max-len": ["error", 79],
         "max-nested-callbacks": ["warn", {"max": 5}],
-        "max-params": ["warn", {"max": 5}],
+        "max-params": ["off"],
         "max-statements": ["off"],
         "max-statements-per-line": ["warn", {"max": 2}],
-        "new-cap": ["warn"],
+        "new-cap": ["off"],
         "new-parens": ["error"],
         "newline-after-var": ["off"],
         "newline-before-return": ["off"],
@@ -164,7 +164,7 @@
         "no-bitwise": ["warn", {"allow": ["~", ">>", "<<", "^"]}],
         "no-continue": ["off"],
         "no-inline-comments": ["warn"],
-        "no-lonely-if": ["warn"],
+        "no-lonely-if": ["off"],
         "no-mixed-spaces-and-tabs": ["error"],
         "no-multiple-empty-lines": ["warn", {"max": 3}],
         "no-negated-condition": ["error"],
@@ -178,13 +178,13 @@
         "no-underscore-dangle": ["off"],
         "no-unneeded-ternary": ["warn"],
         "no-whitespace-before-property": ["error"],
-        "object-curly-spacing": ["error", "never"],
+        "object-curly-spacing": ["error", "always"],
         "one-var": ["error", "never"],
         "one-var-declaration-per-line": ["error", "always"],
         "operator-assignment": ["warn", "always"],
         "operator-linebreak": ["error", "before"],
         "padded-blocks": ["off"],
-        "quote-props": ["error", "always"],
+        "quote-props": ["error", "as-needed"],
         "quotes": ["error", "single", {"allowTemplateLiterals": true}],
         "require-jsdoc": ["off"],
         "semi": ["error", "always"],
