Replace set-option with set in tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set-option -g prefix M-a
 #-- general
 set -sg escape-time 0
 set -g mouse on
-set-option -g allow-rename off
+set -g allow-rename off
 
 
 #-- window handling
