Update tmux config file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,8 @@ bind -n M-n swap-pane -D
 
 
 #-- theme
-set -g pane-border-fg colour239
-set -g pane-active-border-fg cyan
+set -g pane-border-style fg=colour239
+set -g pane-active-border-style fg=cyan
 
 set -g status-bg cyan
 set -g status-fg colour232
