--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,7 @@ bind -n M-n swap-pane -D
 set -g pane-border-style fg=colour239
 set -g pane-active-border-style fg=cyan
 
+set -g status off
 set -g status-bg cyan
 set -g status-fg colour232
 
