Update .sh, .zshrc, .tmux and aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    email = arnellebalane@gmail.com
-    name = Arnelle Balane
+    email = flomente@gmail.com
+    name = Faye Lomente
 
 [color]
     ui = auto
