--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,53 +1,101 @@
-#-- prefix key
-set-option -g prefix M-a
+# --------------------------------------
+# Styling
+# --------------------------------------
 
+# Start window and pane indices at 1.
+set -g base-index 1
+set -g pane-base-index 1
 
-#-- general
-set -sg escape-time 0
+# Force tmux to use the 256 colors
+set -g default-terminal "screen-256color"
+
+# Length of tmux status line
+set -g status-left-length 30
+set -g status-right-length 150
+
+set-option -g status "on"
+
+# Default statusbar color
+set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+
+# Default window title colors
+set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+
+# Default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+
+# Active window title colors
+set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+
+# Set active pane border color
+set-option -g pane-active-border-style fg=colour214
+
+# Set inactive pane border color
+set-option -g pane-border-style fg=colour239
+
+# Message info
+set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+
+# Writing commands inactive
+set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+
+# Pane number display
+set-option -g display-panes-active-colour colour1 #fg2
+set-option -g display-panes-colour colour237 #bg1
+
+# Clock
+set-window-option -g clock-mode-colour colour109 #blue
+
+# Bell
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+
+set-option -g status-left "\
+#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
+#[fg=colour214] ｜\
+#[fg=colour214]#(whoami)@#h\
+#[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍,}"
+
+set-option -g status-right "\
+#[fg=colour246, bg=colour237]  %d %b '%y\
+#[fg=colour109]  %T \
+#[fg=colour248, bg=colour239]"
+
+set-window-option -g window-status-current-format "\
+#[fg=colour237, bg=colour214]\
+#[fg=colour239, bg=colour214] #I* \
+#[fg=colour239, bg=colour214, bold] #W \
+#[fg=colour214, bg=colour237]"
+
+set-window-option -g window-status-format "\
+#[fg=colour237,bg=colour239,noitalics]\
+#[fg=colour223,bg=colour239] #I \
+#[fg=colour223, bg=colour239] #W \
+#[fg=colour239, bg=colour237]"
+
+# --------------------------------------
+# Key Bindings
+# --------------------------------------
+
+# Remap prefix to screens
+set -g prefix C-a
+bind C-a send-prefix
+unbind C-b
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# # --------------------------------------
+# # General Settings
+# # --------------------------------------
+
+# # Don't rename windows automatically
+set-option -g allow-rename off
+
+# # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
-set -g allow-rename off
 
-
-#-- window handling
-bind -n M-C new-window
-bind -n M-N next-window
-bind -n M-P previous-window
-
-
-#-- pane handling
-bind -n M-e split-window -h
-bind -n M-o split-window -v
-
-bind -n M-h resize-pane -L 5
-bind -n M-j resize-pane -D 3
-bind -n M-k resize-pane -U 3
-bind -n M-l resize-pane -R 5
-
-bind -n M-H select-pane -L
-bind -n M-J select-pane -t:.+
-bind -n M-K select-pane -t:.-
-bind -n M-L select-pane -R
-
-bind -n M-p swap-pane -U
-bind -n M-n swap-pane -D
-
-
-#-- theme
-set -g pane-border-style fg=colour239
-set -g pane-active-border-style fg=cyan
-
-set -g status off
-set -g status-bg cyan
-set -g status-fg colour232
-
-
-#-- plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-#-- tmux-resurrect
-bind M-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
-bind M-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
-
-#-- tmux plugin manager
-run '~/.tmux/plugins/tpm/tpm'
+# Set the history limit so we get lots of scrollback.
+set-option -g history-limit 500000
