--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,10 @@ set -g mouse on
 set -g allow-rename off
 
 
+#-- colors
+set-option -sa terminal-features ',*:RGB'
+
+
 #-- window handling
 bind -n M-C new-window
 bind -n M-N next-window
@@ -46,8 +50,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 #-- tmux-resurrect
-bind M-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
-bind M-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
+# bind M-s run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh
+# bind M-r run-shell ~/.tmux/plugins/tmux-resurrect/scripts/restore.sh
 
 #-- tmux plugin manager
 run '~/.tmux/plugins/tpm/tpm'
