--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,10 @@
 root = true
 
 [*]
-indent_size = 2
+indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.json]
+indent_size = 2
