--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,6 @@
 [core]
     pager = delta
+    editor = /opt/homebrew/bin/nvim
 
 [user]
     email = arnellebalane@gmail.com
@@ -24,6 +25,10 @@
     current = yellow bold
     local = yellow
     remote = blue
+
+[include]
+    path = ~/dev/dotfiles/delta/themes.gitconfig
+
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
@@ -32,17 +37,10 @@
 
 [interactive]
     diffFilter = delta --color-only --features=interactive
+
 [add.interactive]
     useBuiltin = false # required for git 2.37.0
 
 [delta]
     navigate = true    # use n and N to move between diff sections
-    features = decorations
-    line-numbers = true
-
-[delta "interactive"]
-    keep-plus-minus-markers = false
-
-[delta "decorations"]
-    hunk-header-style = omit
-    map-styles = "bold purple => syntax #330f29, bold blue => syntax #271344, bold cyan => syntax #0d3531, bold yellow => syntax #222f14"
+    features = darkmoss
