--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,3 +43,11 @@ set -g pane-active-border-style fg=cyan
 set -g status off
 set -g status-bg cyan
 set -g status-fg colour232
+
+bind -n M-1 if-shell '[ "#S" = "default" ]' \
+    "switch-client -l" \
+    "switch-client -t default"
+
+bind -n M-2 if-shell '[ "#W" = "code" ]' \
+    "switch-client -t :cli" \
+    "switch-client -t :code"
