Add tmux binding for opening project selection popup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,3 +51,5 @@ bind -n M-1 if-shell '[ "#S" = "default" ]' \
 bind -n M-2 if-shell '[ "#W" = "code" ]' \
     "switch-client -t :cli" \
     "switch-client -t :code"
+
+bind -n M-r "display-popup -E 'bash ~/dev/dotfiles/tmux/project-manager.sh'"
