Update tmux project manager script with current session selector

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,21 +35,21 @@ bind -n M-L select-pane -R
 bind -n M-p swap-pane -U
 bind -n M-n swap-pane -D
 
+bind -n M-1 switch-client -t :code
+bind -n M-2 switch-client -t :cli
+bind -n M-d switch-client -t default
+bind -n M-s if-shell '[ "#S" = "default" ]' \
+    "switch-client -l" ""
+
+bind -n M-f "display-popup -E 'bash ~/dev/dotfiles/tmux/project-manager.sh open-project'"
+bind -n M-F "display-popup -E 'bash ~/dev/dotfiles/tmux/project-manager.sh select-session'"
+
 
 #-- theme
 set -g pane-border-style fg=colour239
 set -g pane-active-border-style fg=cyan
+set -g popup-border-style fg=colour239
 
 set -g status off
 set -g status-bg cyan
 set -g status-fg colour232
-
-bind -n M-1 if-shell '[ "#S" = "default" ]' \
-    "switch-client -l" \
-    "switch-client -t default"
-
-bind -n M-2 if-shell '[ "#W" = "code" ]' \
-    "switch-client -t :cli" \
-    "switch-client -t :code"
-
-bind -n M-r "display-popup -E 'bash ~/dev/dotfiles/tmux/project-manager.sh'"
